overflow x fix

--- a/assets/css/faq_style.css
+++ b/assets/css/faq_style.css
@@ -21,7 +21,7 @@
 
 html {
   scroll-behavior: smooth;
-  overflow: visible;
+  overflow-x: hidden;
 }
 
 body {
