--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   padding: 0;
   color: #333;
+     overflow-x: hidden;
 }
 
 .account-settings {
