--- a/assets/css/terms_style.css
+++ b/assets/css/terms_style.css
@@ -22,6 +22,7 @@
 html {
   scroll-behavior: smooth;
   overflow: visible;
+     overflow-x: hidden;
 }
 
 body {
