--- a/assets/css/wishlist.css
+++ b/assets/css/wishlist.css
@@ -38,6 +38,7 @@
     margin-bottom: 15px;
     padding: 0;
   box-sizing: border-box;
+     overflow-x: hidden;
 }
 
 body {
